--- a/style.css
+++ b/style.css
@@ -2,19 +2,23 @@
 画面のスタイルシート
  */
 
- body{
-     font-family: "Note sans JP","sans-serif";
-     margin: 0;
-     min-width: 1076px;
+body{
+    font-family: "Note sans JP","sans-serif";
+    margin: 0;
+    min-width: 1076px;
 
- }
+}
 
- .color-green{
-     color: #00abae;
- }
+.color-green{
+    color: #00abae;
+}
 
- /* 
- [header]のスタイルシート
+.sub-title{
+    font-size: 32px;
+}
+
+/* 
+[header]のスタイルシート
   */
 
 .block-header{
@@ -30,3 +34,55 @@
     letter-spacing: 1px;
 }
 
+/* 
+    [main]のスタイルシート
+ */
+
+.block-main{
+    text-align: center;
+    margin: 100px 0;
+
+}
+
+/* 
+[profile]のスタイルシート
+ */
+
+.item-list{
+    width: 100%;
+    max-width: 348px;
+    margin: 0 auto;
+}
+
+.item-list b{
+    display: block;
+    font-size: 24px;
+    font-weight: normal;
+    margin: 20px 0 30px;
+
+}
+
+.item-list p{
+    font-size: 15px;
+    line-height: normal;
+    text-align: left;
+}
+
+.icon-list{
+    list-style: none;
+    width: 100%;
+    max-width: 247px;
+    margin: 30px auto;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-list li{
+    margin-right: 22px;
+}
+
+.icon-list li:last-child{
+    margin-right: 0;
+}
