--- a/style.css
+++ b/style.css
@@ -65,7 +65,12 @@ body{
 .item-list p{
     font-size: 15px;
     line-height: normal;
-    text-align: left;
+    text-align: center;
+}
+
+.item-list img{
+    width: 100px;
+    height: 100px;
 }
 
 .icon-list{
@@ -77,6 +82,12 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.icon-list img{
+    width: 50px;
+    height: 50px;
+
 }
 
 .icon-list li{
@@ -156,4 +167,97 @@ body{
     text-align: center;
     font-size: 15px;
     margin: 50px 0 20px;
+}
+
+/* 
+    タブレット用のスタイルシート
+*/
+
+/* 
+@media screen and (max-width: 767px){
+    .sub-title{
+        color:red
+    }
+} 
+*/
+
+/* 
+    スマホ用のスタイルシート
+*/
+
+@media screen and (max-width: 767px){
+    body{
+        min-width: 100%;
+    }
+
+/* 
+    [header]のスタイルシート
+*/
+
+.block-header{
+    padding: 0 10px 10px;
+    box-shadow: 0 0px 8px -5px rgba(204, 204,204, 0.3);
+}
+
+.block-header a{
+    font-size: 31px;
+}
+
+/* 
+    [main]のスタイルシート
+*/
+
+.block-main{
+    margin: 10px 0;
+}
+
+/* 
+    [profile]のスタイルシート
+*/
+.box-profile{
+    padding: 0 10px;
+}
+
+    .item-list{
+        max-width: 100%;
+    }
+
+    .item-list b{
+        font-size: 18px;
+        font-weight: normal;
+    }
+
+    .icon-list{
+        max-width: 100%;
+    }
+    .icon-list li{
+        margin-right: 25px;
+    }
+
+    /* 
+        [works]のスタイルシート
+    */
+
+    .box-works{
+        margin: 60px;
+        padding: 0 10px;
+    }
+
+    .works-list{
+        max-width: 100%;
+    }
+    .works-list li{
+        max-width: 100%;
+        float: none;
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+    .works-list h3{
+        font-size: 20px;
+        margin: 5px 0;
+    }
+    .works-list span{
+        font-size: 14px;
+        
+    }
 }
